[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Inventory Backgrounds/backpack0.png" type="Texture" id=1]
[ext_resource path="res://assets/Inventory Backgrounds/backpack1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Backpack.gd" type="Script" id=3]
[ext_resource path="res://assets/User Interface/up_arrow_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/User Interface/up_arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/User Interface/down_arrow.png" type="Texture" id=6]
[ext_resource path="res://assets/User Interface/down_arrow_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/Inventory Backgrounds/backpack2.png" type="Texture" id=8]
[ext_resource path="res://assets/Inventory Backgrounds/backpack5.png" type="Texture" id=9]
[ext_resource path="res://assets/Inventory Backgrounds/backpack6.png" type="Texture" id=10]
[ext_resource path="res://assets/Inventory Backgrounds/backpack4.png" type="Texture" id=11]
[ext_resource path="res://assets/Inventory Backgrounds/backpack3.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="InputEventKey" id=14]
scancode = 16777232

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="InputEventKey" id=16]
scancode = 16777234

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 16 )

[node name="Backpack" type="AnimatedSprite"]
position = Vector2( 500, 338 )
scale = Vector2( 14, 14 )
z_index = 1
frames = SubResource( 13 )
script = ExtResource( 3 )

[node name="UpArrow" type="TextureButton" parent="."]
margin_left = -3.0
margin_top = -20.0
margin_right = 8.0
margin_bottom = -9.0
rect_scale = Vector2( 0.5, 0.5 )
shortcut_in_tooltip = false
shortcut = SubResource( 15 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="DownArrow" type="TextureButton" parent="."]
margin_left = -3.0
margin_top = 6.0
margin_right = 8.0
margin_bottom = 17.0
rect_scale = Vector2( 0.5, 0.5 )
shortcut_in_tooltip = false
shortcut = SubResource( 17 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[connection signal="pressed" from="UpArrow" to="." method="_on_Up_Arrow_pressed"]
[connection signal="pressed" from="DownArrow" to="." method="_on_Down_Arrow_pressed"]
